--- a/BlazorApp/Shared/NavMenu.cshtml
+++ b/BlazorApp/Shared/NavMenu.cshtml
@@ -27,6 +27,11 @@
                         <span class='glyphicon glyphicon-th-list'></span> Fetch data
                     </NavLink>
                 </li>
+                <li>
+                    <NavLink href="/calculator">
+                        <span class='glyphicon glyphicon-plus'></span> Calculator
+                    </NavLink>
+                </li>
             </ul>
         </div>
     </div>
